--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,9 +9,10 @@
       content="Web site created using create-react-app"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/1526/PNG/512/checklist_106575.png" type="image/x-icon">
     <title>Todo App</title>
   </head>
   <body>
